Fix mood shadow in dark mode

--- a/_webpack/stylesheets/_dark.scss
+++ b/_webpack/stylesheets/_dark.scss
@@ -198,6 +198,18 @@ body.dark {
     }
 
     /* Moods */
+    .mood {
+        border-color: #888;
+
+        &:hover {
+            background-color: #171717;
+            box-shadow: 0px 4px 12px 5px #333232;
+        }
+        
+        * {
+            background: transparent;
+        }
+    }
     .mood-button {
 
         .mood-arrow {
