--- a/_webpack/stylesheets/_moods.scss
+++ b/_webpack/stylesheets/_moods.scss
@@ -23,7 +23,7 @@
 }
 
 .mood {
-    border: 1px solid #dadce0;
+    border: 2px solid #eee;;
     border-radius: 8px;
     flex: 0 0 280px;
     margin: 4px 8px 20px;
